--- a/src/main/res/values/constants.xml
+++ b/src/main/res/values/constants.xml
@@ -31,4 +31,5 @@
     <bool name="is_tablet">false</bool>
 
     <string name="notification_message_format">%1$s &#160;%2$s</string>
+    <string name="app_id">642883445728173</string>
 </resources>
