--- a/src/main/res/layout/ac_navigation.xml
+++ b/src/main/res/layout/ac_navigation.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.topface.topface.ui.views.HackyDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                android:id="@+id/loNavigationDrawer"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                android:background="@color/bg_main">
+<com.topface.topface.ui.views.HackyDrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/loNavigationDrawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bg_main">
 
-    <FrameLayout
+<FrameLayout
         android:id="@+id/fragment_content"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
