--- a/src/main/res/layout/item_left_menu_button_profile.xml
+++ b/src/main/res/layout/item_left_menu_button_profile.xml
@@ -2,118 +2,117 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <!-- Profile with background -->
     <RelativeLayout
         android:id="@+id/btnProfileLayoutWithBackground"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/left_menu_background_height"
-        android:addStatesFromChildren="true"
         android:layout_alignParentTop="true"
+        android:addStatesFromChildren="true"
         android:visibility="gone">
 
         <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
-            ivr:postProcessor="leftMenuClip"
             android:id="@+id/profile_menu_background_image"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/left_menu_background_height"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            ivr:postProcessor="leftMenuClip" />
 
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/shadow_left_menu_background"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/shadow_left_menu_background" />
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="bottom"
             android:layout_alignParentBottom="true"
+            android:gravity="bottom"
+            android:orientation="horizontal"
             android:paddingBottom="6dp">
 
             <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
-                ivr:postProcessor="mask"
-                ivr:clipMask="@drawable/frame_menu_mask"
-                android:background="@drawable/frame_menu_big_avatar_selector"
                 android:id="@+id/ivMenuAvatarWithBackground"
-                android:tag="ivMenuAvatar"
-                android:src="@drawable/topface_male_profile_button"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="8dp" />
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/frame_menu_big_avatar_selector"
+                android:src="@drawable/topface_male_profile_button"
+                android:tag="ivMenuAvatar"
+                ivr:clipMask="@drawable/frame_menu_mask"
+                ivr:postProcessor="mask" />
 
             <Button
-                android:layout_height="wrap_content"
                 android:id="@+id/btnUserName"
-                android:text="@string/general_profile"
-                android:paddingLeft="14dp"
-                android:background="@android:color/transparent"
                 style="@style/LeftMenuButtons"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:ellipsize="end"
                 android:gravity="bottom"
+                android:paddingLeft="14dp"
                 android:singleLine="true"
-                android:ellipsize="end" />
+                android:text="@string/general_profile" />
 
         </LinearLayout>
 
         <Button
-            android:tag="profile_fragment_button_tag"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/left_menu_background_height"
-            android:background="@drawable/bg_semitransparent_black_selector" />
+            android:background="@drawable/bg_semitransparent_black_selector"
+            android:tag="profile_fragment_button_tag" />
 
         <ImageView
-            android:tag="profileInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="15dp"
+            android:tag="profileInfo"
             android:visibility="gone" />
     </RelativeLayout>
 
     <!-- Profile -->
     <RelativeLayout
         android:id="@+id/btnProfileLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_left_menu_item_selector"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/btnProfileLayoutWithBackground"
         android:addStatesFromChildren="true"
-        android:layout_below="@id/btnProfileLayoutWithBackground">
+        android:background="@drawable/bg_left_menu_item_selector">
 
         <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
-            ivr:postProcessor="mask"
-            ivr:clipMask="@drawable/frame_menu_mask"
-            android:background="@drawable/frame_menu_selector"
             android:id="@+id/ivMenuAvatar"
-            android:tag="ivMenuAvatar"
-            android:src="@drawable/topface_male_profile_button"
-            android:layout_centerVertical="true"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="8dp" />
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/frame_menu_selector"
+            android:src="@drawable/topface_male_profile_button"
+            android:tag="ivMenuAvatar"
+            ivr:clipMask="@drawable/frame_menu_mask"
+            ivr:postProcessor="mask" />
 
         <TextView
             android:id="@+id/profile_button"
-            android:tag="profile_fragment_button_tag"
-            android:layout_toRightOf="@id/ivMenuAvatar"
-            android:layout_centerVertical="true"
             style="@style/LeftMenuButtons"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/ivMenuAvatar"
             android:background="@android:color/transparent"
-            android:paddingLeft="12dp"
             android:minHeight="24dp"
-            android:text="@string/general_profile"
-            />
+            android:paddingLeft="12dp"
+            android:tag="profile_fragment_button_tag"
+            android:text="@string/general_profile" />
 
         <ImageView
-            android:tag="profileInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="185dp"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="185dp"
+            android:layout_marginRight="15dp"
+            android:tag="profileInfo"
             android:visibility="gone" />
     </RelativeLayout>
 </RelativeLayout>
