--- a/src/main/res/layout/chat_footer_send.xml
+++ b/src/main/res/layout/chat_footer_send.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:background="@drawable/bg_chat_footer_send"
     android:orientation="horizontal">
 
