--- a/src/main/res/layout/fragment_edit_input.xml
+++ b/src/main/res/layout/fragment_edit_input.xml
@@ -15,18 +15,19 @@
         android:id="@+id/edText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:gravity="top|left"
         android:inputType="textMultiLine"
+        android:maxLines="5"
+        android:minLines="1"
         android:padding="10dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:minLines="1"
-        android:maxLines="5"
         android:singleLine="false"
-        android:textSize="14sp"
-        android:focusable="true"
-        android:focusableInTouchMode="true" />
+        android:textSize="14sp" />
+
 
 </LinearLayout>
