--- a/src/main/res/layout/item_edit_form_input.xml
+++ b/src/main/res/layout/item_edit_form_input.xml
@@ -5,7 +5,25 @@
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
-    <TextView style="@style/BackgroundFormTitleText"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingRight="10dp">
+
+        <TextView style="@style/BackgroundFormTitleText"
+            android:layout_width="0dp"
+            android:layout_weight="1"/>
+
+
+        <TextView
+            android:id="@+id/charactersCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:textSize="8sp" />
+    </LinearLayout>
+
 
     <EditText
         android:tag="edText"
