--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -199,6 +199,11 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="CharactersCount" parent="ItemTitleText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style name="ButtonGrayText" parent="ItemTitleText">
         <item name="android:textColor">#B5B5B5</item>
         <item name="android:textSize">16sp</item>
