--- a/src/main/res/drawable/arrow_with_paddings.xml
+++ b/src/main/res/drawable/arrow_with_paddings.xml
@@ -2,8 +2,8 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:left="11dp"
-        android:right="11dp"
-        android:drawable="@drawable/ic_up_arrow" />
+        android:drawable="@drawable/ic_up_arrow"
+        android:left="4dp"
+        android:right="6dp" />
 
 </layer-list>
