--- a/src/main/res/layout/fragment_feedback.xml
+++ b/src/main/res/layout/fragment_feedback.xml
@@ -5,8 +5,20 @@
     android:layout_height="fill_parent"
     android:gravity="center_horizontal"
     android:clickable="false"
-    android:orientation="vertical"
-    android:paddingTop="8dp">
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/loFaqTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/item_edit_profile_faq_title"/>
+
+    <include
+        android:id="@+id/loFaq"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
+        layout="@layout/item_edit_form_select"/>
 
     <include
         android:id="@+id/loErrorMessage"
