--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -194,6 +194,11 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="BackgroundFormTitleText.Faq">
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="ItemTitleText" parent="ShadowItemFont">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
