--- a/src/main/res/layout/fragment_auth.xml
+++ b/src/main/res/layout/fragment_auth.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/auth_bg"
@@ -16,12 +17,14 @@
             style="@android:style/Widget.ProgressBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingTop="50dp"
-            android:visibility="gone" />
+            android:layout_marginTop="55dp"
+            android:visibility="gone"
+            android:layout_centerHorizontal="true"
+            android:layout_alignTop="@+id/ivAuthGroup"
+            tools:visibility="visible" />
 
         <LinearLayout
-            android:id="@+id/ivAuthGroup"
+            android:id="@id/ivAuthGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
