--- a/src/main/res/layout/fragment_about.xml
+++ b/src/main/res/layout/fragment_about.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/loText"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:layout_centerInParent="true"
-              android:orientation="vertical"
-              android:background="@drawable/auth_bg"
-              android:gravity="center">
+    android:id="@+id/loText"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_centerInParent="true"
+    android:background="@drawable/auth_bg"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivLogo"
@@ -15,14 +15,14 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/auth_logo"/>
+        android:src="@drawable/auth_logo" />
 
     <TextView
         android:id="@+id/tvVersion"
         style="@style/ItemtText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"/>
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/tvCopyright"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:gravity="center"/>
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/tvExtra"
@@ -38,6 +38,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:autoLink="web"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="#2392d0" />
 </LinearLayout>
