--- a/src/main/res/layout/contacts_layout.xml
+++ b/src/main/res/layout/contacts_layout.xml
@@ -67,7 +67,7 @@
 
     <ListView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dp"
         android:id="@+id/contactsList"
         android:cacheColorHint="#0000"
         android:layout_below="@id/addContainer"
