--- a/src/main/res/layout/fragment_change_auth_data.xml
+++ b/src/main/res/layout/fragment_change_auth_data.xml
@@ -34,9 +34,7 @@
             android:paddingRight="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:hint="@string/password_hint"
-            android:textColorHint="#5F5F5F"
-            android:inputType="textPassword" />
+            android:textColorHint="#5F5F5F" />
 
         <EditText
             android:id="@+id/edPasswordConfirmation"
@@ -53,7 +51,6 @@
             android:paddingRight="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:hint="@string/password_confirmation_hint"
             android:textColorHint="#5F5F5F"
             android:inputType="textPassword" />
 
