--- a/src/main/res/layout/fragment_topface_account.xml
+++ b/src/main/res/layout/fragment_topface_account.xml
@@ -32,7 +32,7 @@
                 android:paddingRight="4dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tvText"
@@ -43,8 +43,7 @@
                 android:padding="4dp"
                 android:textSize="14sp"
                 style="@style/ItemTitleText"
-                android:drawablePadding="5dp"
-                 />
+                android:drawablePadding="5dp" />
         </RelativeLayout>
 
         <Button
@@ -67,7 +66,19 @@
             android:background="@drawable/btn_gray_selector"
             android:text="@string/settings_logout"
             style="@style/Widget.Topface.Button.Big.Gray"
-            android:visibility="gone"/>
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/btnChangeEmail"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/btn_gray_selector"
+            android:text="@string/change_email"
+            style="@style/Widget.Topface.Button.Big.Gray"
+            android:visibility="gone" />
     </LinearLayout>
 
     <Button
@@ -79,8 +90,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         style="@style/Widget.Topface.Button.Big.Gray"
-        android:text="@string/settings_delete_account"
-        />
+        android:text="@string/settings_delete_account" />
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/llvLogoutLoading"
