--- a/src/main/res/layout/item_gift.xml
+++ b/src/main/res/layout/item_gift.xml
@@ -8,6 +8,7 @@
 
     <com.topface.topface.ui.views.ImageViewRemote
         android:id="@+id/giftImage"
+        android:background="@null"
         style="@style/Gift" />
 
     <LinearLayout
@@ -20,7 +21,7 @@
             android:id="@+id/giftPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:layout_gravity="center"
             android:drawableRight="@drawable/coins"
             android:drawablePadding="2dp"
