--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="bg_holo">#F1F1F1</color>
     <color name="bg_white">#FFFFFF</color>
     <color name="bg_light_blue">#AEE5FD</color>
+    <color name="blue_60_percent">#99AEE5FD</color>
     <color name="text_color_gray">#333333</color>
 
     <color name="tab_counter_text_color_selected">#33B5E5</color>
