--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -400,19 +400,19 @@
         <item name="android:layout_marginRight">10dp</item>
     </style>
 
-    <style name="ListTime">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentRight">true</item>
+    <style name="Shadowless">
+        <item name="android:shadowColor">@null</item>
+        <item name="android:shadowRadius">0</item>
+    </style>
+
+    <style name="ListTime" parent="Shadowless">
+        <item name="android:gravity">right|center_vertical</item>
         <item name="android:textColor">@color/list_time</item>
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:gravity">center_vertical</item>
     </style>
 
-    <style name="ListMessageText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="ListMessageText" parent="Shadowless">
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/list_text_gray</item>
@@ -420,13 +420,7 @@
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="ListMessageText.New">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:textColor">@color/list_text_black</item>
-    </style>
-
-    <style name="ListUnreadCounter">
+    <style name="ListUnreadCounter" parent="Shadowless">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">16dp</item>
         <item name="android:background">@drawable/ico_message_bg</item>
@@ -437,7 +431,7 @@
         <item name="android:layout_marginLeft">6dp</item>
     </style>
 
-    <style name="ListCity">
+    <style name="ListCity" parent="Shadowless">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
@@ -445,31 +439,15 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/list_text_gray</item>
-        <item name="android:shadowColor">@null</item>
-        <item name="android:shadowRadius">0</item>
     </style>
 
-    <style name="ListCity.New">
-        <item name="android:textColor">@color/list_text_black</item>
-    </style>
-
-    <style name="ListAgeAndCity" parent="ListCity">
-        <item name="android:layout_marginLeft">0dp</item>
-        <item name="android:drawablePadding">5dp</item>
-    </style>
-
-    <style name="ListAgeAndCity.New">
-        <item name="android:textColor">@color/list_text_black</item>
-    </style>
-
-    <style name="ListName">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="ListName" parent="Shadowless">
         <item name="android:drawablePadding">6dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxWidth">190dp</item>
     </style>
 
     <style name="WhiteHeader" parent="ShadowUserText">
@@ -480,7 +458,6 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerVertical">true</item>
-        <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:src">@drawable/im_item_mutual_heart</item>
