--- a/src/main/res/layout/dating_lock_popup.xml
+++ b/src/main/res/layout/dating_lock_popup.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="#ff3a3a3a">
+    android:background="@color/bg_main">
 
-    <ImageView
+<ImageView
         android:id="@+id/iv_close"
         android:layout_gravity="right"
         android:layout_width="wrap_content"
