--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -4,8 +4,7 @@
     android:id="@+id/titleContainer"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_gravity="center_vertical"
-    android:orientation="horizontal">
+    android:layout_gravity="center_vertical">
 
     <LinearLayout
         android:id="@+id/title_clickable"
@@ -21,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/arrow_with_padding" />
+            android:src="@drawable/ic_up_arrow_with_padding" />
 
         <LinearLayout
             android:layout_width="wrap_content"
