--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -924,6 +924,7 @@
     <style name="FlatButton">
         <item name="android:textColor">@color/text_white</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:minHeight">40dp</item>
     </style>
 
     <style name="FlatButton.Gray">
