--- a/src/main/res/values/editor.xml
+++ b/src/main/res/values/editor.xml
@@ -53,6 +53,7 @@
     <string name="editor_ban_del_about">Удалить "О Себе"</string>
     <string name="editor_ban_result_ok">Пользователь забанен</string>
     <string name="editor_ban_unban_user">Убрать бан</string>
+    <string name="editor_ban_unban_user_result">Разбанен</string>
 
     <string-array name="editor_debug_titles">
         <item>Только в debug режиме</item>
