--- a/src/main/res/values/ads_integrations.xml
+++ b/src/main/res/values/ads_integrations.xml
@@ -6,5 +6,6 @@
     <integer name="adman_mediation_slot_id">6392</integer>
     <integer name="smaato_publisher_id">1001000709</integer>
     <integer name="smaato_space_id">130000663</integer>
+    <integer name="smaato_fullscreen_space_id">130004130</integer>
     <integer name="smaato_autoreload_time">60</integer>
 </resources>
